parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit_or_empty
Rule 1     assignment_expression_opt -> empty
Rule 2     assignment_expression_opt -> assignment_expression
Rule 3     block_item_list_opt -> empty
Rule 4     block_item_list_opt -> block_item_list
Rule 5     declaration_list_opt -> empty
Rule 6     declaration_list_opt -> declaration_list
Rule 7     declaration_specifiers_opt -> empty
Rule 8     declaration_specifiers_opt -> declaration_specifiers
Rule 9     expression_opt -> empty
Rule 10    expression_opt -> expression
Rule 11    identifier_list_opt -> empty
Rule 12    identifier_list_opt -> identifier_list
Rule 13    init_declarator_list_opt -> empty
Rule 14    init_declarator_list_opt -> init_declarator_list
Rule 15    initializer_list_opt -> empty
Rule 16    initializer_list_opt -> initializer_list
Rule 17    type_qualifier_list_opt -> empty
Rule 18    type_qualifier_list_opt -> type_qualifier_list
Rule 19    translation_unit_or_empty -> translation_unit
Rule 20    translation_unit_or_empty -> empty
Rule 21    translation_unit -> external_declaration
Rule 22    translation_unit -> translation_unit external_declaration
Rule 23    external_declaration -> function_defination
Rule 24    external_declaration -> declaration
Rule 25    function_defination -> declaration_specifiers declarator declaration_list_opt compound_statement
Rule 26    declaration_list -> declaration
Rule 27    declaration_list -> declaration_list declaration
Rule 28    statement -> expression_statement
Rule 29    statement -> compound_statement
Rule 30    statement -> selection_statement
Rule 31    statement -> iteration_statement
Rule 32    statement -> jump_statement
Rule 33    compound_statement -> brace_open block_item_list_opt brace_close
Rule 34    block_item_list -> block_item
Rule 35    block_item_list -> block_item_list block_item
Rule 36    block_item -> declaration
Rule 37    block_item -> statement
Rule 38    expression_statement -> expression_opt SEMI
Rule 39    selection_statement -> IF LPAREN expression RPAREN statement
Rule 40    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 41    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 42    iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMI
Rule 43    iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 44    iteration_statement -> FOR LPAREN declaration expression_opt SEMI expression_opt RPAREN statement
Rule 45    jump_statement -> BREAK SEMI
Rule 46    jump_statement -> CONTINUE SEMI
Rule 47    jump_statement -> RETURN expression SEMI
Rule 48    jump_statement -> RETURN SEMI
Rule 49    declaration -> declaration_specifiers init_declarator_list SEMI
Rule 50    init_declarator_list -> init_declarator
Rule 51    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 52    init_declarator -> declarator
Rule 53    init_declarator -> declarator EQUALS initializer
Rule 54    declarator -> direct_declarator
Rule 55    declarator -> pointer direct_declarator
Rule 56    direct_declarator -> ID
Rule 57    direct_declarator -> LPAREN declarator RPAREN
Rule 58    direct_declarator -> direct_declarator LBRACKET type_qualifier_list_opt assignment_expression_opt RBRACKET
Rule 59    direct_declarator -> direct_declarator LBRACKET STATIC type_qualifier_list assignment_expression RBRACKET
Rule 60    direct_declarator -> direct_declarator LBRACKET type_qualifier_list STATIC assignment_expression RBRACKET
Rule 61    direct_declarator -> direct_declarator LPAREN identifier_list_opt RPAREN
Rule 62    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 63    identifier_list -> identifier
Rule 64    identifier_list -> identifier_list COMMA identifier
Rule 65    parameter_type_list -> parameter_list
Rule 66    parameter_list -> parameter_declaration
Rule 67    parameter_list -> parameter_list COMMA parameter_declaration
Rule 68    parameter_declaration -> declaration_specifiers declarator
Rule 69    declaration_specifiers -> storage_class_specifier declaration_specifiers_opt
Rule 70    declaration_specifiers -> type_specifier declaration_specifiers_opt
Rule 71    declaration_specifiers -> type_qualifier declaration_specifiers_opt
Rule 72    pointer -> TIMES type_qualifier_list_opt
Rule 73    pointer -> TIMES type_qualifier_list_opt pointer
Rule 74    type_qualifier_list -> type_qualifier
Rule 75    type_qualifier_list -> type_qualifier_list type_qualifier
Rule 76    type_qualifier -> CONST
Rule 77    type_qualifier -> VOLATILE
Rule 78    storage_class_specifier -> AUTO
Rule 79    storage_class_specifier -> REGISTER
Rule 80    storage_class_specifier -> STATIC
Rule 81    storage_class_specifier -> EXTERN
Rule 82    storage_class_specifier -> TYPEDEF
Rule 83    type_specifier -> type_specifier_simple
Rule 84    type_specifier -> enum_specifier
Rule 85    type_specifier -> struct_specifier
Rule 86    type_specifier_simple -> VOID
Rule 87    type_specifier_simple -> CHAR
Rule 88    type_specifier_simple -> SHORT
Rule 89    type_specifier_simple -> INT
Rule 90    type_specifier_simple -> LONG
Rule 91    type_specifier_simple -> FLOAT
Rule 92    type_specifier_simple -> DOUBLE
Rule 93    type_specifier_simple -> SIGNED
Rule 94    type_specifier_simple -> UNSIGNED
Rule 95    type_specifier_simple -> TYPEID
Rule 96    enum_specifier -> ENUM ID
Rule 97    enum_specifier -> ENUM brace_open enumerator_list brace_close
Rule 98    enum_specifier -> ENUM ID brace_open enumerator_list brace_close
Rule 99    enumerator_list -> enumerator
Rule 100   enumerator_list -> enumerator_list COMMA
Rule 101   enumerator_list -> enumerator_list COMMA enumerator
Rule 102   enumerator -> ID
Rule 103   enumerator -> ID EQUALS constant_expression
Rule 104   struct_specifier -> STRUCT ID
Rule 105   struct_specifier -> STRUCT brace_open struct_declaration_list brace_close
Rule 106   struct_specifier -> STRUCT ID brace_open struct_declaration_list brace_close
Rule 107   struct_declaration_list -> struct_declaration
Rule 108   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 109   struct_declaration -> specifier_qualifier_list struct_declarator_list SEMI
Rule 110   specifier_qualifier_list -> specifier_qualifier_list type_specifier
Rule 111   specifier_qualifier_list -> specifier_qualifier_list type_qualifier
Rule 112   specifier_qualifier_list -> type_specifier
Rule 113   specifier_qualifier_list -> type_qualifier_list type_specifier
Rule 114   struct_declarator_list -> struct_declarator
Rule 115   struct_declarator_list -> struct_declarator COMMA struct_declarator
Rule 116   struct_declarator -> declarator
Rule 117   initializer -> assignment_expression
Rule 118   initializer -> brace_open initializer_list_opt brace_close
Rule 119   initializer -> brace_open initializer_list COMMA brace_close
Rule 120   initializer_list -> initializer
Rule 121   initializer_list -> initializer_list COMMA initializer
Rule 122   constant_expression -> conditional_expression
Rule 123   expression -> assignment_expression
Rule 124   expression -> expression COMMA assignment_expression
Rule 125   assignment_expression -> conditional_expression
Rule 126   assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 127   assignment_operator -> EQUALS
Rule 128   assignment_operator -> XOREQUAL
Rule 129   assignment_operator -> TIMESEQUAL
Rule 130   assignment_operator -> DIVEQUAL
Rule 131   assignment_operator -> MODEQUAL
Rule 132   assignment_operator -> PLUSEQUAL
Rule 133   assignment_operator -> MINUSEQUAL
Rule 134   assignment_operator -> LSHIFTEQUAL
Rule 135   assignment_operator -> RSHIFTEQUAL
Rule 136   assignment_operator -> ANDEQUAL
Rule 137   assignment_operator -> OREQUAL
Rule 138   conditional_expression -> binary_expression
Rule 139   conditional_expression -> binary_expression CONDOP expression COLON conditional_expression
Rule 140   binary_expression -> cast_expression
Rule 141   binary_expression -> binary_expression TIMES binary_expression
Rule 142   binary_expression -> binary_expression DIVIDE binary_expression
Rule 143   binary_expression -> binary_expression MOD binary_expression
Rule 144   binary_expression -> binary_expression PLUS binary_expression
Rule 145   binary_expression -> binary_expression MINUS binary_expression
Rule 146   binary_expression -> binary_expression LSHIFT binary_expression
Rule 147   binary_expression -> binary_expression RSHIFT binary_expression
Rule 148   binary_expression -> binary_expression GT binary_expression
Rule 149   binary_expression -> binary_expression GE binary_expression
Rule 150   binary_expression -> binary_expression LT binary_expression
Rule 151   binary_expression -> binary_expression LE binary_expression
Rule 152   binary_expression -> binary_expression EQ binary_expression
Rule 153   binary_expression -> binary_expression NE binary_expression
Rule 154   binary_expression -> binary_expression AND binary_expression
Rule 155   binary_expression -> binary_expression XOR binary_expression
Rule 156   binary_expression -> binary_expression OR binary_expression
Rule 157   binary_expression -> binary_expression LAND binary_expression
Rule 158   binary_expression -> binary_expression LOR binary_expression
Rule 159   cast_expression -> unary_expression
Rule 160   unary_expression -> postfix_expression
Rule 161   unary_expression -> PLUSPLUS unary_expression
Rule 162   unary_expression -> MINUSMINUS unary_expression
Rule 163   unary_expression -> unary_operator cast_expression
Rule 164   unary_operator -> AND
Rule 165   unary_operator -> TIMES
Rule 166   unary_operator -> PLUS
Rule 167   unary_operator -> MINUS
Rule 168   unary_operator -> NOT
Rule 169   unary_operator -> LNOT
Rule 170   argument_expression_list -> assignment_expression
Rule 171   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 172   postfix_expression -> primary_expression
Rule 173   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 174   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 175   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 176   postfix_expression -> postfix_expression PERIOD identifier
Rule 177   postfix_expression -> postfix_expression ARROW identifier
Rule 178   postfix_expression -> postfix_expression PLUSPLUS
Rule 179   postfix_expression -> postfix_expression MINUSMINUS
Rule 180   primary_expression -> identifier
Rule 181   primary_expression -> constant
Rule 182   primary_expression -> string_literal
Rule 183   primary_expression -> LPAREN expression RPAREN
Rule 184   identifier -> ID
Rule 185   constant -> INT_CONST
Rule 186   constant -> FLOAT_CONST
Rule 187   constant -> CHAR_CONST
Rule 188   string_literal -> STRING_LITERAL
Rule 189   brace_open -> LBRACE
Rule 190   brace_close -> RBRACE
Rule 191   empty -> <empty>

Terminals, with rules where they appear

AND                  : 154 164
ANDEQUAL             : 136
ARROW                : 177
AUTO                 : 78
BREAK                : 45
CHAR                 : 87
CHAR_CONST           : 187
COLON                : 139
COMMA                : 51 64 67 100 101 115 119 121 124 171
CONDOP               : 139
CONST                : 76
CONTINUE             : 46
DIVEQUAL             : 130
DIVIDE               : 142
DO                   : 42
DOUBLE               : 92
ELSE                 : 40
ENUM                 : 96 97 98
EQ                   : 152
EQUALS               : 53 103 127
EXTERN               : 81
FLOAT                : 91
FLOAT_CONST          : 186
FOR                  : 43 44
GE                   : 149
GT                   : 148
ID                   : 56 96 98 102 103 104 106 184
IF                   : 39 40
INT                  : 89
INT_CONST            : 185
LAND                 : 157
LBRACE               : 189
LBRACKET             : 58 59 60 173
LE                   : 151
LNOT                 : 169
LONG                 : 90
LOR                  : 158
LPAREN               : 39 40 41 42 43 44 57 61 62 174 175 183
LSHIFT               : 146
LSHIFTEQUAL          : 134
LT                   : 150
MINUS                : 145 167
MINUSEQUAL           : 133
MINUSMINUS           : 162 179
MOD                  : 143
MODEQUAL             : 131
NE                   : 153
NOT                  : 168
OR                   : 156
OREQUAL              : 137
PERIOD               : 176
PLUS                 : 144 166
PLUSEQUAL            : 132
PLUSPLUS             : 161 178
RBRACE               : 190
RBRACKET             : 58 59 60 173
REGISTER             : 79
RETURN               : 47 48
RPAREN               : 39 40 41 42 43 44 57 61 62 174 175 183
RSHIFT               : 147
RSHIFTEQUAL          : 135
SEMI                 : 38 42 43 43 44 45 46 47 48 49 109
SHORT                : 88
SIGNED               : 93
STATIC               : 59 60 80
STRING_LITERAL       : 188
STRUCT               : 104 105 106
TIMES                : 72 73 141 165
TIMESEQUAL           : 129
TYPEDEF              : 82
TYPEID               : 95
UNSIGNED             : 94
VOID                 : 86
VOLATILE             : 77
WHILE                : 41 42
XOR                  : 155
XOREQUAL             : 128
error                : 

Nonterminals, with rules where they appear

argument_expression_list : 171 174
assignment_expression : 2 59 60 117 123 124 126 170 171
assignment_expression_opt : 58
assignment_operator  : 126
binary_expression    : 138 139 141 141 142 142 143 143 144 144 145 145 146 146 147 147 148 148 149 149 150 150 151 151 152 152 153 153 154 154 155 155 156 156 157 157 158 158
block_item           : 34 35
block_item_list      : 4 35
block_item_list_opt  : 33
brace_close          : 33 97 98 105 106 118 119
brace_open           : 33 97 98 105 106 118 119
cast_expression      : 140 163
compound_statement   : 25 29
conditional_expression : 122 125 139
constant             : 181
constant_expression  : 103
declaration          : 24 26 27 36 44
declaration_list     : 6 27
declaration_list_opt : 25
declaration_specifiers : 8 25 49 68
declaration_specifiers_opt : 69 70 71
declarator           : 25 52 53 57 68 116
direct_declarator    : 54 55 58 59 60 61 62
empty                : 1 3 5 7 9 11 13 15 17 20
enum_specifier       : 84
enumerator           : 99 101
enumerator_list      : 97 98 100 101
expression           : 10 39 40 41 42 47 124 139 173 183
expression_opt       : 38 43 43 43 44 44
expression_statement : 28
external_declaration : 21 22
function_defination  : 23
identifier           : 63 64 176 177 180
identifier_list      : 12 64
identifier_list_opt  : 61
init_declarator      : 50 51
init_declarator_list : 14 49 51
init_declarator_list_opt : 
initializer          : 53 120 121
initializer_list     : 16 119 121
initializer_list_opt : 118
iteration_statement  : 31
jump_statement       : 32
parameter_declaration : 66 67
parameter_list       : 65 67
parameter_type_list  : 62
pointer              : 55 73
postfix_expression   : 160 173 174 175 176 177 178 179
primary_expression   : 172
selection_statement  : 30
specifier_qualifier_list : 109 110 111
statement            : 37 39 40 40 41 42 43 44
storage_class_specifier : 69
string_literal       : 182
struct_declaration   : 107 108
struct_declaration_list : 105 106 108
struct_declarator    : 114 115 115
struct_declarator_list : 109
struct_specifier     : 85
translation_unit     : 19 22
translation_unit_or_empty : 0
type_qualifier       : 71 74 75 111
type_qualifier_list  : 18 59 60 75 113
type_qualifier_list_opt : 58 72 73
type_specifier       : 70 110 112 113
type_specifier_simple : 83
unary_expression     : 126 159 161 162
unary_operator       : 163

Parsing method: LALR

state 0

    (0) S' -> . translation_unit_or_empty
    (19) translation_unit_or_empty -> . translation_unit
    (20) translation_unit_or_empty -> . empty
    (21) translation_unit -> . external_declaration
    (22) translation_unit -> . translation_unit external_declaration
    (191) empty -> .
    (23) external_declaration -> . function_defination
    (24) external_declaration -> . declaration
    (25) function_defination -> . declaration_specifiers declarator declaration_list_opt compound_statement
    (49) declaration -> . declaration_specifiers init_declarator_list SEMI
    (69) declaration_specifiers -> . storage_class_specifier declaration_specifiers_opt
    (70) declaration_specifiers -> . type_specifier declaration_specifiers_opt
    (71) declaration_specifiers -> . type_qualifier declaration_specifiers_opt
    (78) storage_class_specifier -> . AUTO
    (79) storage_class_specifier -> . REGISTER
    (80) storage_class_specifier -> . STATIC
    (81) storage_class_specifier -> . EXTERN
    (82) storage_class_specifier -> . TYPEDEF
    (83) type_specifier -> . type_specifier_simple
    (84) type_specifier -> . enum_specifier
    (85) type_specifier -> . struct_specifier
    (76) type_qualifier -> . CONST
    (77) type_qualifier -> . VOLATILE
    (86) type_specifier_simple -> . VOID
    (87) type_specifier_simple -> . CHAR
    (88) type_specifier_simple -> . SHORT
    (89) type_specifier_simple -> . INT
    (90) type_specifier_simple -> . LONG
    (91) type_specifier_simple -> . FLOAT
    (92) type_specifier_simple -> . DOUBLE
    (93) type_specifier_simple -> . SIGNED
    (94) type_specifier_simple -> . UNSIGNED
    (95) type_specifier_simple -> . TYPEID
    (96) enum_specifier -> . ENUM ID
    (97) enum_specifier -> . ENUM brace_open enumerator_list brace_close
    (98) enum_specifier -> . ENUM ID brace_open enumerator_list brace_close
    (104) struct_specifier -> . STRUCT ID
    (105) struct_specifier -> . STRUCT brace_open struct_declaration_list brace_close
    (106) struct_specifier -> . STRUCT ID brace_open struct_declaration_list brace_close

    $end            reduce using rule 191 (empty -> .)
    AUTO            shift and go to state 11
    REGISTER        shift and go to state 12
    STATIC          shift and go to state 13
    EXTERN          shift and go to state 14
    TYPEDEF         shift and go to state 15
    CONST           shift and go to state 19
    VOLATILE        shift and go to state 20
    VOID            shift and go to state 21
    CHAR            shift and go to state 22
    SHORT           shift and go to state 23
    INT             shift and go to state 24
    LONG            shift and go to state 25
    FLOAT           shift and go to state 26
    DOUBLE          shift and go to state 27
    SIGNED          shift and go to state 28
    UNSIGNED        shift and go to state 29
    TYPEID          shift and go to state 30
    ENUM            shift and go to state 31
    STRUCT          shift and go to state 32

    translation_unit_or_empty      shift and go to state 1
    translation_unit               shift and go to state 2
    empty                          shift and go to state 3
    external_declaration           shift and go to state 4
    function_defination            shift and go to state 5
    declaration                    shift and go to state 6
    declaration_specifiers         shift and go to state 7
    storage_class_specifier        shift and go to state 8
    type_specifier                 shift and go to state 9
    type_qualifier                 shift and go to state 10
    type_specifier_simple          shift and go to state 16
    enum_specifier                 shift and go to state 17
    struct_specifier               shift and go to state 18

state 1

    (0) S' -> translation_unit_or_empty .



state 2

    (19) translation_unit_or_empty -> translation_unit .
    (22) translation_unit -> translation_unit . external_declaration
    (23) external_declaration -> . function_defination
    (24) external_declaration -> . declaration
    (25) function_defination -> . declaration_specifiers declarator declaration_list_opt compound_statement
    (49) declaration -> . declaration_specifiers init_declarator_list SEMI
    (69) declaration_specifiers -> . storage_class_specifier declaration_specifiers_opt
    (70) declaration_specifiers -> . type_specifier declaration_specifiers_opt
    (71) declaration_specifiers -> . type_qualifier declaration_specifiers_opt
    (78) storage_class_specifier -> . AUTO
    (79) storage_class_specifier -> . REGISTER
    (80) storage_class_specifier -> . STATIC
    (81) storage_class_specifier -> . EXTERN
    (82) storage_class_specifier -> . TYPEDEF
    (83) type_specifier -> . type_specifier_simple
    (84) type_specifier -> . enum_specifier
    (85) type_specifier -> . struct_specifier
    (76) type_qualifier -> . CONST
    (77) type_qualifier -> . VOLATILE
    (86) type_specifier_simple -> . VOID
    (87) type_specifier_simple -> . CHAR
    (88) type_specifier_simple -> . SHORT
    (89) type_specifier_simple -> . INT
    (90) type_specifier_simple -> . LONG
    (91) type_specifier_simple -> . FLOAT
    (92) type_specifier_simple -> . DOUBLE
    (93) type_specifier_simple -> . SIGNED
    (94) type_specifier_simple -> . UNSIGNED
    (95) type_specifier_simple -> . TYPEID
    (96) enum_specifier -> . ENUM ID
    (97) enum_specifier -> . ENUM brace_open enumerator_list brace_close
    (98) enum_specifier -> . ENUM ID brace_open enumerator_list brace_close
    (104) struct_specifier -> . STRUCT ID
    (105) struct_specifier -> . STRUCT brace_open struct_declaration_list brace_close
    (106) struct_specifier -> . STRUCT ID brace_open struct_declaration_list brace_close

    $end            reduce using rule 19 (translation_unit_or_empty -> translation_unit .)
    AUTO            shift and go to state 11
    REGISTER        shift and go to state 12
    STATIC          shift and go to state 13
    EXTERN          shift and go to state 14
    TYPEDEF         shift and go to state 15
    CONST           shift and go to state 19
    VOLATILE        shift and go to state 20
    VOID            shift and go to state 21
    CHAR            shift and go to state 22
    SHORT           shift and go to state 23
    INT             shift and go to state 24
    LONG            shift and go to state 25
    FLOAT           shift and go to state 26
    DOUBLE          shift and go to state 27
    SIGNED          shift and go to state 28
    UNSIGNED        shift and go to state 29
    TYPEID          shift and go to state 30
    ENUM            shift and go to state 31
    STRUCT          shift and go to state 32

    external_declaration           shift and go to state 33
    function_defination            shift and go to state 5
    declaration                    shift and go to state 6
    declaration_specifiers         shift and go to state 7
    storage_class_specifier        shift and go to state 8
    type_specifier                 shift and go to state 9
    type_qualifier                 shift and go to state 10
    type_specifier_simple          shift and go to state 16
    enum_specifier                 shift and go to state 17
    struct_specifier               shift and go to state 18

state 3

    (20) translation_unit_or_empty -> empty .

    $end            reduce using rule 20 (translation_unit_or_empty -> empty .)


state 4

    (21) translation_unit -> external_declaration .

    AUTO            reduce using rule 21 (translation_unit -> external_declaration .)
    REGISTER        reduce using rule 21 (translation_unit -> external_declaration .)
    STATIC          reduce using rule 21 (translation_unit -> external_declaration .)
    EXTERN          reduce using rule 21 (translation_unit -> external_declaration .)
    TYPEDEF         reduce using rule 21 (translation_unit -> external_declaration .)
    CONST           reduce using rule 21 (translation_unit -> external_declaration .)
    VOLATILE        reduce using rule 21 (translation_unit -> external_declaration .)
    VOID            reduce using rule 21 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 21 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 21 (translation_unit -> external_declaration .)
    INT             reduce using rule 21 (translation_unit -> external_declaration .)
    LONG            reduce using rule 21 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 21 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 21 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 21 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 21 (translation_unit -> external_declaration .)
    TYPEID          reduce using rule 21 (translation_unit -> external_declaration .)
    ENUM            reduce using rule 21 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 21 (translation_unit -> external_declaration .)
    $end            reduce using rule 21 (translation_unit -> external_declaration .)


state 5

    (23) external_declaration -> function_defination .

    AUTO            reduce using rule 23 (external_declaration -> function_defination .)
    REGISTER        reduce using rule 23 (external_declaration -> function_defination .)
    STATIC          reduce using rule 23 (external_declaration -> function_defination .)
    EXTERN          reduce using rule 23 (external_declaration -> function_defination .)
    TYPEDEF         reduce using rule 23 (external_declaration -> function_defination .)
    CONST           reduce using rule 23 (external_declaration -> function_defination .)
    VOLATILE        reduce using rule 23 (external_declaration -> function_defination .)
    VOID            reduce using rule 23 (external_declaration -> function_defination .)
    CHAR            reduce using rule 23 (external_declaration -> function_defination .)
    SHORT           reduce using rule 23 (external_declaration -> function_defination .)
    INT             reduce using rule 23 (external_declaration -> function_defination .)
    LONG            reduce using rule 23 (external_declaration -> function_defination .)
    FLOAT           reduce using rule 23 (external_declaration -> function_defination .)
    DOUBLE          reduce using rule 23 (external_declaration -> function_defination .)
    SIGNED          reduce using rule 23 (external_declaration -> function_defination .)
    UNSIGNED        reduce using rule 23 (external_declaration -> function_defination .)
    TYPEID          reduce using rule 23 (external_declaration -> function_defination .)
    ENUM            reduce using rule 23 (external_declaration -> function_defination .)
    STRUCT          reduce using rule 23 (external_declaration -> function_defination .)
    $end            reduce using rule 23 (external_declaration -> function_defination .)


state 6

    (24) external_declaration -> declaration .

    AUTO            reduce using rule 24 (external_declaration -> declaration .)
    REGISTER        reduce using rule 24 (external_declaration -> declaration .)
    STATIC          reduce using rule 24 (external_declaration -> declaration .)
    EXTERN          reduce using rule 24 (external_declaration -> declaration .)
    TYPEDEF         reduce using rule 24 (external_declaration -> declaration .)
    CONST           reduce using rule 24 (external_declaration -> declaration .)
    VOLATILE        reduce using rule 24 (external_declaration -> declaration .)
    VOID            reduce using rule 24 (external_declaration -> declaration .)
    CHAR            reduce using rule 24 (external_declaration -> declaration .)
    SHORT           reduce using rule 24 (external_declaration -> declaration .)
    INT             reduce using rule 24 (external_declaration -> declaration .)
    LONG            reduce using rule 24 (external_declaration -> declaration .)
    FLOAT           reduce using rule 24 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 24 (external_declaration -> declaration .)
    SIGNED          reduce using rule 24 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 24 (external_declaration -> declaration .)
    TYPEID          reduce using rule 24 (external_declaration -> declaration .)
    ENUM            reduce using rule 24 (external_declaration -> declaration .)
    STRUCT          reduce using rule 24 (external_declaration -> declaration .)
    $end            reduce using rule 24 (external_declaration -> declaration .)


state 7

    (25) function_defination -> declaration_specifiers . declarator declaration_list_opt compound_statement
    (49) declaration -> declaration_specifiers . init_declarator_list SEMI
    (54) declarator -> . direct_declarator
    (55) declarator -> . pointer direct_declarator
    (50) init_declarator_list -> . init_declarator
    (51) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (56) direct_declarator -> . ID
    (57) direct_declarator -> . LPAREN declarator RPAREN
    (58) direct_declarator -> . direct_declarator LBRACKET type_qualifier_list_opt assignment_expression_opt RBRACKET
    (59) direct_declarator -> . direct_declarator LBRACKET STATIC type_qualifier_list assignment_expression RBRACKET
    (60) direct_declarator -> . direct_declarator LBRACKET type_qualifier_list STATIC assignment_expression RBRACKET
    (61) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (62) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (72) pointer -> . TIMES type_qualifier_list_opt
    (73) pointer -> . TIMES type_qualifier_list_opt pointer
    (52) init_declarator -> . declarator
    (53) init_declarator -> . declarator EQUALS initializer

    ID              shift and go to state 39
    LPAREN          shift and go to state 40
    TIMES           shift and go to state 41

    declarator                     shift and go to state 34
    init_declarator_list           shift and go to state 35
    direct_declarator              shift and go to state 36
    pointer                        shift and go to state 37
    init_declarator                shift and go to state 38

state 8

    (69) declaration_specifiers -> storage_class_specifier . declaration_specifiers_opt
    (7) declaration_specifiers_opt -> . empty
    (8) declaration_specifiers_opt -> . declaration_specifiers
    (191) empty -> .
    (69) declaration_specifiers -> . storage_class_specifier declaration_specifiers_opt
    (70) declaration_specifiers -> . type_specifier declaration_specifiers_opt
    (71) declaration_specifiers -> . type_qualifier declaration_specifiers_opt
    (78) storage_class_specifier -> . AUTO
    (79) storage_class_specifier -> . REGISTER
    (80) storage_class_specifier -> . STATIC
    (81) storage_class_specifier -> . EXTERN
    (82) storage_class_specifier -> . TYPEDEF
    (83) type_specifier -> . type_specifier_simple
    (84) type_specifier -> . enum_specifier
    (85) type_specifier -> . struct_specifier
    (76) type_qualifier -> . CONST
    (77) type_qualifier -> . VOLATILE
    (86) type_specifier_simple -> . VOID
    (87) type_specifier_simple -> . CHAR
    (88) type_specifier_simple -> . SHORT
    (89) type_specifier_simple -> . INT
    (90) type_specifier_simple -> . LONG
    (91) type_specifier_simple -> . FLOAT
    (92) type_specifier_simple -> . DOUBLE
    (93) type_specifier_simple -> . SIGNED
    (94) type_specifier_simple -> . UNSIGNED
    (95) type_specifier_simple -> . TYPEID
    (96) enum_specifier -> . ENUM ID
    (97) enum_specifier -> . ENUM brace_open enumerator_list brace_close
    (98) enum_specifier -> . ENUM ID brace_open enumerator_list brace_close
    (104) struct_specifier -> . STRUCT ID
    (105) struct_specifier -> . STRUCT brace_open struct_declaration_list brace_close
    (106) struct_specifier -> . STRUCT ID brace_open struct_declaration_list brace_close

    ID              reduce using rule 191 (empty -> .)
    LPAREN          reduce using rule 191 (empty -> .)
    TIMES           reduce using rule 191 (empty -> .)
    AUTO            shift and go to state 11
    REGISTER        shift and go to state 12
    STATIC          shift and go to state 13
    EXTERN          shift and go to state 14
    TYPEDEF         shift and go to state 15
    CONST           shift and go to state 19
    VOLATILE        shift and go to state 20
    VOID            shift and go to state 21
    CHAR            shift and go to state 22
    SHORT           shift and go to state 23
    INT             shift and go to state 24
    LONG            shift and go to state 25
    FLOAT           shift and go to state 26
    DOUBLE          shift and go to state 27
    SIGNED          shift and go to state 28
    UNSIGNED        shift and go to state 29
    TYPEID          shift and go to state 30
    ENUM            shift and go to state 31
    STRUCT          shift and go to state 32

    storage_class_specifier        shift and go to state 8
    declaration_specifiers_opt     shift and go to state 42
    empty                          shift and go to state 43
    declaration_specifiers         shift and go to state 44
    type_specifier                 shift and go to state 9
    type_qualifier                 shift and go to state 10
    type_specifier_simple          shift and go to state 16
    enum_specifier                 shift and go to state 17
    struct_specifier               shift and go to state 18

state 9

    (70) declaration_specifiers -> type_specifier . declaration_specifiers_opt
    (7) declaration_specifiers_opt -> . empty
    (8) declaration_specifiers_opt -> . declaration_specifiers
    (191) empty -> .
    (69) declaration_specifiers -> . storage_class_specifier declaration_specifiers_opt
    (70) declaration_specifiers -> . type_specifier declaration_specifiers_opt
    (71) declaration_specifiers -> . type_qualifier declaration_specifiers_opt
    (78) storage_class_specifier -> . AUTO
    (79) storage_class_specifier -> . REGISTER
    (80) storage_class_specifier -> . STATIC
    (81) storage_class_specifier -> . EXTERN
    (82) storage_class_specifier -> . TYPEDEF
    (83) type_specifier -> . type_specifier_simple
    (84) type_specifier -> . enum_specifier
    (85) type_specifier -> . struct_specifier
    (76) type_qualifier -> . CONST
    (77) type_qualifier -> . VOLATILE
    (86) type_specifier_simple -> . VOID
    (87) type_specifier_simple -> . CHAR
    (88) type_specifier_simple -> . SHORT
    (89) type_specifier_simple -> . INT
    (90) type_specifier_simple -> . LONG
    (91) type_specifier_simple -> . FLOAT
    (92) type_specifier_simple -> . DOUBLE
    (93) type_specifier_simple -> . SIGNED
    (94) type_specifier_simple -> . UNSIGNED
    (95) type_specifier_simple -> . TYPEID
    (96) enum_specifier -> . ENUM ID
    (97) enum_specifier -> . ENUM brace_open enumerator_list brace_close
    (98) enum_specifier -> . ENUM ID brace_open enumerator_list brace_close
    (104) struct_specifier -> . STRUCT ID
    (105) struct_specifier -> . STRUCT brace_open struct_declaration_list brace_close
    (106) struct_specifier -> . STRUCT ID brace_open struct_declaration_list brace_close
